- Minor tweaks to RMPB (Graham)
- Add support for segment types 0xCD and 0xCE used in URC-7145 (Graham)
- Make raw downloads of segmented remotes be loadable .ir files (Graham)
-- Private build 11
- Add new interface JP2BT, a prototype Bluetooth interface for remotes such as URC7980 (Graham)
-- Private build 12
- Replace rxtx library (serial port) used by JP2BT with jSerialComm library (Marcin)

Changes for v2.05
-- Private build 1
- Added MAXQ executor for Apple protocol to protocols.ini (Graham)
- Updated digitmaps.bin to 689 (Dave Reed)
- Added RDF, map and image for Monster Revolution 200 (Graham)
- Updated RDFs for XSight/Nevo remotes (Graham)
-- Release build 2
- Added support for firmware upgrades for XSight Lite/Plus and Monster remotes (Graham)
- Fix bug that created duplicates in list when download offered choice of remotes (Graham)
- Fix bug in analyzer of MAXQ protocols (Graham)
- Updated CommHID version number to 1.0 to reflect increase in functionality (Graham)
-- Private build 3
- Fix bug in operation of Edit Protocol button on Devices tab (Graham)
- Add radio buttons to Timing Summary to allow choice of raw and analyzed timings (Graham)
- Add further features to Timing Summary, including conversion of burst pairs to user-specified code strings (Graham)
-- Private build 4
- Debugging and improvements to Learned Signal analysis and timing summary (Graham)
-- Private build 5
- Further improvements to Learned Signal analysis and timing summary (Graham)
- Add Delete All button to RMTablePanel and activate it for Learned Signal Panel (Graham)
- Add new option "Same sig = same remote" in Options > Advanced, preventing need to choose RDF when repeatedly downloading same remote (Graham)
-- Private build 6
- Further debugging of Vyrolan's code for learned signal analysis (Graham)
- Add button to Advanced Details section of learned signal edit panel to unlock rounding after it has been set (Graham)