@@ -41,6 +41,8 @@ Changes for v2.06
 - Add new interface JP2BT, a prototype Bluetooth interface for remotes such as URC7980 (Graham)
 -- Private build 12
 - Replace rxtx library (serial port) used by JP2BT with jSerialComm library (Marcin)
+-- Private build 13
+- Fix issue with BT disconnection by the remote not always working (Graham)
 
 Changes for v2.05
 -- Private build 1
